# lcp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: common.h  debug.h  net_shared.h  packet_queue.h  packets.h  payload_queue.h  protocol.h  protocol_impl.h  send_queue.h
include/client/: app.h  client.h  gui.h  gui_templates.h  net.h  net_callbacks.h  peer_list.h
include/server/: client_context.h  client_list.h  net.h  net_callbacks.h  server.h
resources/: app.blp  chat_message.blp  gresource.xml  peer_row.blp  styles.css
src/: debug.c  net_shared.c  packet_queue.c  packets.c  payload_queue.c  protocol.c  send_queue.c
src/client/: app.c  client.c  gui.c  gui_templates.c  main.c  net.c  net_callbacks.c  peer_list.c
src/server/: client_context.c  client_list.c  main.c  net.c  net_callbacks.c  server.c
